--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- contect  -->
 </head>
 <body>
-    <p>Hello World</p>
+    <h1>Hello World</h1>
     <i class="fab fa-accusoft"></i>
     <i class="fab fa-canadian-maple-leaf"></i>
     <!-- script -->
